Add router links

--- a/src/app/shared/components/sidebar/sidebar.component.html
+++ b/src/app/shared/components/sidebar/sidebar.component.html
@@ -4,7 +4,7 @@
             <h2>Rohan Sogani</h2>
             <h4>rmsogani@ucdavis.edu</h4>
         </div>
-        <img src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Soufiane FADIL">
+        <img src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Rohan Sogani">
     </div>
 
     <mat-divider></mat-divider>
