--- a/src/app/layouts/default/default.component.html
+++ b/src/app/layouts/default/default.component.html
@@ -1,4 +1,4 @@
-<app-header></app-header>
+<app-header (toggleSideBarForMe)="sideBarToggler($event)"></app-header>
 
 <mat-drawer-container>
     <mat-drawer mode="side" [opened]="sideBarOpen">
