--- a/src/app/shared/widgets/form/form.component.html
+++ b/src/app/shared/widgets/form/form.component.html
@@ -1,4 +1,4 @@
-<form>
+<form class="text-center border border-light p-5">
     <div class="form-group1">
         <label for="numberOfNodes">Nodes</label>
         <input required min="4" ngModel name="numberOfNodes" #numberOfNodes="ngModel" (change)="log(numberOfNodes)" id="numberOfNodes" type="number" class="form-group1">
@@ -8,12 +8,15 @@
         </div>
         <div></div>
         <label for="numberOfClients">Clients</label>
-        <input required ngModel name="numberOfClients" #numberOfClients="ngModel" (change)="log(numberOfClients)" id="numberOfClients" type="number" class="form-group1">
-        <div class="alert alert-danger" *ngIf="numberOfClients.touched && !numberOfClients.valid">Number of Clients is required</div>
+        <input required min="1" ngModel name="numberOfClients" #numberOfClients="ngModel" (change)="log(numberOfClients)" id="numberOfClients" type="number" class="form-group1">
+        <div class="alert alert-danger" *ngIf="numberOfClients.touched && !numberOfClients.valid" >
+            <div *ngIf="numberOfClients.errors.requires">Number of Nodes is required</div>
+            <div *ngIf="numberOfClients.errors.min">Number of Nodes should at least 1</div>
+        </div>
         <div></div>
         <label for="batchSize">Batch Size</label>
         <input required ngModel name="batchSize" #batchSize="ngModel" (change)="log(batchSize)" id="batchSize" type="number" class="form-group1">
         <div class="alert alert-danger" *ngIf="batchSize.touched && !batchSize.valid">Batch Size is required</div>
     </div>
-    <button class="btn btn-primary">Run</button>
+    <button class="btn btn-primary" (click)="runEvent(i)">Run</button>
 </form>
