--- a/src/app/modules/dashboard/dashboard.component.html
+++ b/src/app/modules/dashboard/dashboard.component.html
@@ -4,6 +4,7 @@
 
 <mat-divider></mat-divider>
 <div>
+    <iframe src="https://snapshot.raintank.io/dashboard/snapshot/xi3NtJwZG9mC09hCWjRxHghJISZ5oWQa?orgId=2&fullscreen&panelId=2" width="100%" height="500"></iframe>
     <div>Line Chart</div>
     <div>Line Chart</div>
     <div>Line Chart</div>
