--- a/src/app/shared/widgets/form/form.component.html
+++ b/src/app/shared/widgets/form/form.component.html
@@ -1,22 +1,38 @@
-<form class="text-center border border-light p-5">
-    <div class="form-group1">
-        <label for="numberOfNodes">Nodes</label>
-        <input required min="4" ngModel name="numberOfNodes" #numberOfNodes="ngModel" (change)="log(numberOfNodes)" id="numberOfNodes" type="number" class="form-group1">
-        <div class="alert alert-danger" *ngIf="numberOfNodes.touched && !numberOfNodes.valid" >
-            <div *ngIf="numberOfNodes.errors.requires">Number of Nodes is required</div>
-            <div *ngIf="numberOfNodes.errors.min">Number of Nodes should at least 4</div>
-        </div>
+<div class="container-fluid">
+    <h1>Setup Info</h1>
+    <form [formGroup]="runForm" (ngSubmit)="onSubmit()" class="text-center border border-light p-5">
+        <label>Nodes:
+            <input required min="4" type="number" formControlName="numberOfNodes">
+        </label>
         <div></div>
-        <label for="numberOfClients">Clients</label>
-        <input required min="1" ngModel name="numberOfClients" #numberOfClients="ngModel" (change)="log(numberOfClients)" id="numberOfClients" type="number" class="form-group1">
-        <div class="alert alert-danger" *ngIf="numberOfClients.touched && !numberOfClients.valid" >
-            <div *ngIf="numberOfClients.errors.requires">Number of Nodes is required</div>
-            <div *ngIf="numberOfClients.errors.min">Number of Nodes should at least 1</div>
-        </div>
+        <label>Clients:
+            <input required min="1" type="number" formControlName="numberOfClients">
+        </label>
         <div></div>
-        <label for="batchSize">Batch Size</label>
-        <input required ngModel name="batchSize" #batchSize="ngModel" (change)="log(batchSize)" id="batchSize" type="number" class="form-group1">
-        <div class="alert alert-danger" *ngIf="batchSize.touched && !batchSize.valid">Batch Size is required</div>
-    </div>
-    <button class="btn btn-primary" (click)="runEvent(i)">Run</button>
-</form>
+        <label>Batch Size:
+            <input type="number" formControlName="batchSize">
+        </label>
+        <div></div>
+
+        <!-- <div class="form-group1">
+            <label for="numberOfNodes">Nodes</label>
+            <input required min="4" ngModel name="numberOfNodes" #numberOfNodes="ngModel" (change)="log(numberOfNodes)" id="numberOfNodes" type="number" class="form-group1">
+            <div class="alert alert-danger" *ngIf="numberOfNodes.touched && !numberOfNodes.valid" >
+                <div *ngIf="numberOfNodes.errors.requires">Number of Nodes is required</div>
+                <div *ngIf="numberOfNodes.errors.min">Number of Nodes should at least 4</div>
+            </div>
+            <div></div>
+            <label for="numberOfClients">Clients</label>
+            <input required min="1" ngModel name="numberOfClients" #numberOfClients="ngModel" (change)="log(numberOfClients)" id="numberOfClients" type="number" class="form-group1">
+            <div class="alert alert-danger" *ngIf="numberOfClients.touched && !numberOfClients.valid" >
+                <div *ngIf="numberOfClients.errors.requires">Number of Nodes is required</div>
+                <div *ngIf="numberOfClients.errors.min">Number of Nodes should at least 1</div>
+            </div>
+            <div></div>
+            <label for="batchSize">Batch Size</label>
+            <input required ngModel name="batchSize" #batchSize="ngModel" (change)="log(batchSize)" id="batchSize" type="number" class="form-group1">
+            <div class="alert alert-danger" *ngIf="batchSize.touched && !batchSize.valid">Batch Size is required</div>
+        </div> -->
+        <button type="submit" class="btn btn-primary">Run</button>
+    </form>
+</div>
