--- a/src/app/modules/dashboard/dashboard.component.html
+++ b/src/app/modules/dashboard/dashboard.component.html
@@ -4,7 +4,7 @@
 
 <mat-divider></mat-divider>
 <div>
-    <iframe src="http://localhost:3000/d/h5Vy-OyWk/new-dashboard-copy?orgId=1&from=1579716345234&to=1579737945234&panelId=2&fullscreen" width="450" height="200" frameborder="0"></iframe>
+    <iframe src="https://snapshot.raintank.io/dashboard/snapshot/Y43eF5DTeS56JzKFpzeg0wiyJbi2kDwV" width="100%" height="600" frameborder="0"></iframe>
     <div>Line Chart</div>
     <div>Line Chart</div>
     <div>Line Chart</div>
